--- a/.github/windows/hayride.wxs
+++ b/.github/windows/hayride.wxs
@@ -11,45 +11,49 @@
     <FeatureRef Id="MainFeature"/>
   </Package>
 
-  <!-- Define a directory starting from an environment variable -->
   <Fragment>
-    <Property Id="USERPROFILE" Value="%USERPROFILE%" />
-  </Fragment>
+    <StandardDirectory Id="ProgramFilesFolder">
+      <Directory Id="APPDIR" Name="Hayride">
+        <Component Id="BinaryFiles" Guid="aeb7719f-6fce-4532-ad89-4b0e600e72ad">
+          <File Source="hayride.exe" />
+          <File Source="LICENSE.txt" />
+        </Component>
+      </Directory>
+    </StandardDirectory>
 
-  <Fragment>
-    <StandardDirectory  Id="TARGETDIR" >
-      <Directory Id="UserProfile" Name="." FileSource="[%USERPROFILE%]">
-        <Directory Id="HayrideRoot" Name=".hayride">
-          <Directory Id="BinDir" Name="bin">
-            <Component Id="BinaryFiles" Guid="aeb7719f-6fce-4532-ad89-4b0e600e72ad">
-              <File Source="hayride.exe" />
-              <File Source="LICENSE.txt" />
-            </Component>
-          </Directory>
+    <StandardDirectory Id="AppDataFolder">
+      <Directory Id="HayrideRoot" Name=".hayride">
+        <Component Id="ConfigFile" Guid="48696a39-1302-460e-af44-19e42c91f7f2">
+          <File Source="config.yaml" />
+          <RemoveFolder Id="rmHayrideRoot" Directory="HayrideRoot" On="uninstall" />
+        </Component>
 
-          <Component Id="ConfigFile" Guid="48696a39-1302-460e-af44-19e42c91f7f2">
-            <File Source="config.yaml" />
-          </Component>
+        <Directory Id="RegistryDir" Name="registry">
+          <Directory Id="MorphsDir" Name="morphs">
+            <Directory Id="HayrideCoreDir" Name="hayride-core">
+              <Directory Id="CoreVersionDir" Name="0.0.1">
+                <Component Id="CoreFilesHayrideCore" Guid="29f44402-41fe-48c2-b0fa-0b9af4d91696">
+                  <File Source="hayride-core/0.0.1/cli.wasm" />
+                  <File Source="hayride-core/0.0.1/server-cfg.wasm" />
+                  <File Source="hayride-core/0.0.1/ai-server-cfg.wasm" />
 
-          <Directory Id="RegistryDir" Name="register">
-            <Directory Id="MorphsDir" Name="morphs">
-              <Directory Id="HayrideCoreDir" Name="hayride-core">
-                <Directory Id="CoreVersionDir" Name="0.0.1">
-                  <Component Id="CoreFilesHayrideCore" Guid="29f44402-41fe-48c2-b0fa-0b9af4d91696">
-                    <File Source="hayride-core/0.0.1/cli.wasm" />
-                    <File Source="hayride-core/0.0.1/server-cfg.wasm" />
-                    <File Source="hayride-core/0.0.1/ai-server-cfg.wasm" />
-                  </Component>
-                </Directory>
+                  <RemoveFolder Id="rmRegistryDir" Directory="RegistryDir" On="uninstall" />
+                  <RemoveFolder Id="rmMorphsDir" Directory="MorphsDir" On="uninstall" />
+                  <RemoveFolder Id="rmHayrideCoreDir" Directory="HayrideCoreDir" On="uninstall" />
+                  <RemoveFolder Id="rmCoreVersionDir" Directory="CoreVersionDir" On="uninstall" />
+                </Component>
               </Directory>
-              <Directory Id="HayrideDir" Name="hayride">
-                <Directory Id="HayrideVersionDir" Name="0.0.1">
-                  <Component Id="CoreFilesHayride" Guid="b779f4d9-2ee9-45a3-8c58-46f5fc2ccb20">
-                    <File Source="hayride/0.0.1/ai-server.wasm" />
-                    <File Source="hayride/0.0.1/inmemory.wasm" />
-                    <File Source="hayride/0.0.1/llama31.wasm" />
-                  </Component>
-                </Directory>
+            </Directory>
+            <Directory Id="HayrideDir" Name="hayride">
+              <Directory Id="HayrideVersionDir" Name="0.0.1">
+                <Component Id="CoreFilesHayride" Guid="b779f4d9-2ee9-45a3-8c58-46f5fc2ccb20">
+                  <File Source="hayride/0.0.1/ai-server.wasm" />
+                  <File Source="hayride/0.0.1/inmemory.wasm" />
+                  <File Source="hayride/0.0.1/llama31.wasm" />
+
+                  <RemoveFolder Id="rmHayrideDir" Directory="HayrideDir" On="uninstall" />
+                  <RemoveFolder Id="rmHayrideVersionDir" Directory="HayrideVersionDir" On="uninstall" />
+                </Component>
               </Directory>
             </Directory>
           </Directory>
@@ -59,14 +63,14 @@
   </Fragment>
 
   <Fragment>
-    <DirectoryRef Id="INSTALLFOLDER">
+    <DirectoryRef Id="APPDIR">
       <Component Id="UpdateUserPath" Guid="0493651e-6a7a-4cea-b2aa-6d9dcd9ad646">
         <Environment
           Id="HayrideUserPathUpdate"
           Name="PATH"
           Action="set"
           Part="last"
-          Value="[INSTALLFOLDER]bin"
+          Value="[APPDIR]"
           Permanent="no"
           System="no" />
         <CreateFolder />
